--- a/bross/templates/singlebrewery.html
+++ b/bross/templates/singlebrewery.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
         <div id="beerslist">
+                <h2>Beers from {{ beers.0.brewery }}</h2>
                 {% for beer in beers %}
-                <p><a href="/beers/{{ beer.slug }}/"><img src="{{ beer.image1.url }}" />{{ beer }}</a></p>
+                <p><a href="/beers/{{ beer.slug }}/">{{ beer }}</a></p>
                 {% endfor %}
         </div>
 {% endblock %}
