--- a/bross/templates/base.html
+++ b/bross/templates/base.html
@@ -4,11 +4,14 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <h1>My helpful timestamp site</h1>
+	<nav>
+		{% if user.is_authenticated %}<p><a href="/logout/">Logout</a></p>{% else %}<p><a href="/login/">Login</a></p>
+		{% endif %}
+
+	</nav>
+    <h1>{% block h1 %}{% endblock %}</h1>
     {% block content %}{% endblock %}
     {% block footer %}
-    <hr>
-    <p>Thanks for visiting my site.</p>
     {% endblock %}
 </body>
 </html>
