Added (part of) Pages app.
Het ziet er leuk uit maar doet niks.
De User login wordt nog niet meegenomen naar de Pages app. Deze zit
alleen nog in de Account app.

--- a/bross/templates/dashboard.html
+++ b/bross/templates/dashboard.html
@@ -3,5 +3,9 @@
 {% block title %}Dashboard{% endblock %}
 {% block h1 %}Dashboard{% endblock %}
 {% block content %}
-    <p>{{account.user}} ingelogd, hoezee!</p>
+    <p>Content</p>
+    <a href="/pages/">Pages</a>
+    <a href="/themes/">Themes</a>
+    <a href="/menus/">Menus</a>
+    <a href="/modules/">Modules</a>
 {% endblock %}
