--- a/bross/templates/base.html
+++ b/bross/templates/base.html
@@ -5,9 +5,14 @@
 </head>
 <body>
 	<nav>
-		{% if user.is_authenticated %}<p><a href="/logout/">Logout</a></p>{% else %}<p><a href="/login/">Login</a></p>
-		{% endif %}
-
+		<ul>
+			{% if user.is_authenticated %}<li><a href="/pages/">Pages</a></li>
+    		<li><a href="/themes/">Themes</a></li>
+   			<li><a href="/menus/">Menus</a></li>
+    		<li><a href="/modules/">Modules</a></li>{% endif %}
+			{% if user.is_authenticated %}<p>User: {{account.user}} <a href="/logout/">Logout</a></p>{% else %}<p><a href="/login/">Login</a></p>
+			{% endif %}
+		</ul>
 	</nav>
     <h1>{% block h1 %}{% endblock %}</h1>
     {% block content %}{% endblock %}
