--- a/bross/templates/login.html
+++ b/bross/templates/login.html
@@ -1,8 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-<form action="" method="post">
+<div id="header"> 
+        <div class="logo">
+                <a href="#"><h1>Bross CMS</h1></a>
+        </div>
+</div>
+
+<div id="content" class="center"> 
+        <h1>Let's get started!</h1>
+        </br>
+        <button class="big">register</button>
+        <h2>Already got an account?</h2>
+
+<form id="login" action="" method="post">
 {% csrf_token %}
-{% if form.errors %} <p> Please correct the fields: {{form.errors}} </p> {% endif %}
+{% if form.errors %} <p> Please correct the fields:</p> {% endif %}
 <div class="register_div">
 	{% if form.username.errors %} <p class="error"> {{form.username.errors}}</p> {% endif %}
 	<p> <label for="username" {% if form.username.errors %} class="error" {% endif %}> Username: </label></p>
@@ -13,7 +25,7 @@
         <p><label for="password"{% if form.password.errors %} class="error"{% endif %}>Password:</label></p>
         <p>{{ form.password }}</p>
 </div>
-<p><input type="submit" alt="Register" /></p>
+<a href="#" class="silly">forgot your password?</a><input type="submit" name="submit" value="login" />
 </form>
 
 {% endblock %}
