--- a/bross/templates/add_page.html
+++ b/bross/templates/add_page.html
@@ -7,6 +7,12 @@
     <form>
     	<p>{{ form.title }}</p>
     	<p>{{ form.content }}</p>
+    	<p>{{ form.description }}</p>
+    	<p>{{ form.location }}</p>
+    	<p>{{ form.template }}</p>
+    	<p>{{ form.parent }}</p>
+    	<p>{{ form.menu }}</p>
+    	<p>{{ form.status }}</p>
     	<p><input type="submit" alt="Register" value="Add page / Publish / wat anders stoers"/></p>
     </form>
 {% endblock %}
