--- a/bross/templates/base.html
+++ b/bross/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css">
 </head>
 <body>
 	<nav>
