--- a/bross/templates/base.html
+++ b/bross/templates/base.html
@@ -1,22 +1,40 @@
+{% load static %}
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>BROSS CMS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}" title="default" />
+    <!--- <link rel="stylesheet" href="/static/css/font-awesome.min.css"> !-->
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-	<nav>
-		<ul>
-			{% if user.is_authenticated %}<li><a href="/pages/">Pages</a></li>
-    		<li><a href="/themes/">Themes</a></li>
-   			<li><a href="/menus/">Menus</a></li>
-    		<li><a href="/modules/">Modules</a></li>{% endif %}
-			{% if user.is_authenticated %}<p>User: {{account.user}} <a href="/logout/">Logout</a></p>{% else %}<p><a href="/login/">Login</a></p>
-			{% endif %}
-		</ul>
-	</nav>
+    <div id="header"> 
+        <div class="logo">
+                <a href="#"><h1>Bross CMS</h1></a>
+        </div>
+    </div>
+    <nav>
+        <ul>
+            {% if user.is_authenticated %}<li><a href="/pages/">Pages</a></li>
+            <li><a href="/themes/">Themes</a></li>
+            <li><a href="/menus/">Menus</a></li>
+            <li><a href="/modules/">Modules</a></li>{% endif %}
+            {% if user.is_authenticated %}<p>User: {{account.user}} <a href="/logout/">Logout</a></p>{% else %}<p><a href="/login/">Login</a></p>
+            {% endif %}
+        </ul>
+    </nav>
+    
     <h1>{% block h1 %}{% endblock %}</h1>
+
     {% block content %}{% endblock %}
     {% block footer %}
+	<div id="footer">
+		<p> 2013 Bross CMS | <a href="#">www.brosscms.com</a></p>
+	</div>
     {% endblock %}
 </body>
 </html>
