--- a/bross/templates/base.html
+++ b/bross/templates/base.html
@@ -14,7 +14,7 @@
 <body>
     <div id="header"> 
         <div class="logo">
-                <a href="#"><h1>Bross CMS</h1></a>
+                <a href="/dashboard/"><h1>Bross CMS</h1></a>
         </div>
     </div>
     <nav>
