--- a/bross/templates/add_page.html
+++ b/bross/templates/add_page.html
@@ -13,6 +13,6 @@
     	<p>{{ form.parent }}</p>
     	<p>{{ form.menu }}</p>
     	<p>{{ form.status }}</p>
-    	<p><input type="submit" alt="Register" value="Add page / Publish / wat anders stoers"/></p>
+    	<p style="height:2em"><input type="submit" alt="Register" value="Add page"/></p>
     </form>
 {% endblock %}
