--- a/bross/templates/base.html
+++ b/bross/templates/base.html
@@ -30,6 +30,14 @@
     
     <h1>{% block h1 %}{% endblock %}</h1>
 
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
     {% block content %}{% endblock %}
     {% block footer %}
 	<div id="footer">
