--- a/bross/templates/base.html
+++ b/bross/templates/base.html
@@ -9,6 +9,13 @@
     <!--- <link rel="stylesheet" href="/static/css/font-awesome.min.css"> !-->
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static "js/tiny_mce/tiny_mce.js" %}"></script>
+    <script type="text/javascript">
+        tinymce.init({
+            selector: "textarea"
+        });
+    </script>
+
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
