--- a/bross/static/css/style.css
+++ b/bross/static/css/style.css
@@ -24,6 +24,19 @@ body {
 	padding:50px 0;
 }
 
+.content {
+	width: 1000px;
+	margin: 0 auto;
+}
+
+.form {
+	width: 500px;
+	margin: 0 auto;
+}
+
+.register_div {
+	margin:10px 0;
+}
 #header {
 	position:fixed;
 	top:0;
@@ -205,3 +218,4 @@ div.ballon {
 div.ballon:hover{
 	background: url(../img/ballonhover.png);
 }
+
