--- a/bross/templates/dashboard.html
+++ b/bross/templates/dashboard.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
 
 {% block title %}Dashboard{% endblock %}
+{% block nav %}
+        <div class="nav">
+            <ul>
+                <li><a class="pages" href="/pages/">Pages</a></li>
+                <li><a class="themes" href="/themes/">Themes</a></li>
+                <li><a class="menus" href="/menus/">Menus</a></li>
+                <li><a class="modules" href="/modules/">Modules</a></li>
+            </ul>
+        </div>
+{% endblock %}
 {% block h1 %}Dashboard{% endblock %}
 {% block content %}
     <p>Content</p>
