--- a/bross/templates/pages.html
+++ b/bross/templates/pages.html
@@ -2,6 +2,16 @@
 
 {% block title %}Pages{% endblock %}
 {% block h1 %}Pages{% endblock %}
+{% block nav %}
+        <div class="nav">
+            <ul>
+                <li><a class="pages active" href="/pages/"><span><img src="../static/img/pages.png" height="21" width="17"> </span>Pages</a></li>
+                <li><a class="themes" href="/themes/"><span><img src="../static/img/themes.png" height="21" width="21"></span> Themes</a></li>
+                <li><a class="menus" href="/menus/"><span><img src="../static/img/menu.png" height="18" width="21"></span> Menus</a></li>
+                <li><a class="modules" href="/modules/"><span><img src="../static/img/modules.png" height="21" width="21"></span> Modules</a></li>
+            </ul>
+        </div>
+{% endblock %}
 {% block content %}
 	<a href="/pages/add/">Add page</a>
     <p>Laat pages zien</p>
