Added password reset
works nothing meer aan doen

--- a/bross/templates/login.html
+++ b/bross/templates/login.html
@@ -21,5 +21,6 @@
 </div>
 <a href="#" class="silly">forgot your password?</a><input type="submit" name="submit" value="login" />
 </form>
+<p>Forgot your password? <a href="/resetpassword/">Reset it here</a></p>
 
 {% endblock %}
