--- a/bross/templates/base.html
+++ b/bross/templates/base.html
@@ -30,15 +30,20 @@
 
         <div class="profile-options">
             <ul class="profile-options">
-                <li>{% if user.is_authenticated %}<p>User: {{account.user}}</li>
-                <li><a href="/logout/">Logout</a></p>{% else %}<p><a href="/login/">Login</a></p></li>
-                {% endif %}
+                <li>{% if user.is_authenticated %}<p class="user-loggedin">Welkom {{account.user}}!</li>{% endif %}
+                <li><a class="logout" href="/logout/"><span><img src="{% static "img/logout.png" %}" height="17" width="20"> </span>Logout</a></p>
             </ul>
         </div>
-    </div>    
-    <h1>{% block h1 %}{% endblock %}</h1>
-
-    {% block content %}{% endblock %}
+    </div> 
+    <div class="sidebar">
+        {% block sidebar %}
+        {% endblock %}
+    </div>
+    <div class="cms-content">
+    {% block content %}   
+        <h1>{% block h1 %}{% endblock %}</h1>
+    </div>
+    {% endblock %}
     {% block footer %}
 	<div id="footer">
 		<p> 2013 Bross CMS | <a href="http://www.brosscms.com/" target="_BLANK">www.brosscms.com</a></p>
