--- a/bross/templates/add_page.html
+++ b/bross/templates/add_page.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
+{% load static %}
+{% block title %}Add Page{% endblock %}
+{% block nav %}
+        <div class="nav">
+            <ul>
+                <li><a class="pages active" href="/pages/"><span><img src="{% static "img/pages.png" %}" height="21" width="17"> </span>Pages</a></li>
+                <li><a class="themes" href="/themes/"><span><img src="{% static "img/themes.png" %}" height="21" width="21"></span> Themes</a></li>
+                <li><a class="menus" href="/menus/"><span><img src="{% static "img/menu.png" %}" height="18" width="21"></span> Menus</a></li>
+                <li><a class="modules" href="/modules/"><span><img src="{% static "img/modules.png" %}" height="21" width="21"></span> Modules</a></li>
+            </ul>
+        </div>
+{% endblock %}
 
-{% block title %}Add page{% endblock %}
 {% block h1 %}Add page{% endblock %}
 {% block content %}
 	<a href="/pages/">Nah, laat maar zitten, terug naar pages.</a>
