--- a/bross/templates/dashboard.html
+++ b/bross/templates/dashboard.html
@@ -4,15 +4,17 @@
 {% block nav %}
         <div class="nav">
             <ul>
-                <li><a class="pages" href="/pages/">Pages</a></li>
-                <li><a class="themes" href="/themes/">Themes</a></li>
-                <li><a class="menus" href="/menus/">Menus</a></li>
-                <li><a class="modules" href="/modules/">Modules</a></li>
+                <li><a class="pages" href="/pages/"><span><img src="../static/img/pages.png" height="21" width="17"> </span>Pages</a></li>
+                <li><a class="themes" href="/themes/"><span><img src="../static/img/themes.png" height="21" width="21"></span> Themes</a></li>
+                <li><a class="menus" href="/menus/"><span><img src="../static/img/menu.png" height="18" width="21"></span> Menus</a></li>
+                <li><a class="modules" href="/modules/"><span><img src="../static/img/modules.png" height="21" width="21"></span> Modules</a></li>
             </ul>
         </div>
 {% endblock %}
-{% block h1 %}Dashboard{% endblock %}
+{% block sidebar %}
+{% endblock %}
 {% block content %}
+{% block h1 %}Dashboard{% endblock %}
     <p>Content</p>
     <a href="/pages/">Pages</a>
     <a href="/themes/">Themes</a>
