--- a/bross/templates/login.html
+++ b/bross/templates/login.html
@@ -1,26 +1,54 @@
-{% extends "base.html" %}
-{% block content %}
-<div id="content" class="center"> 
-        <h1>Let's get started!</h1>
-        </br>
-        <button class="big">register</button>
-        <h2>Already got an account?</h2>
+{% load static %}
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html lang="en">
+<head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>BROSS CMS</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}" title="default" />
+        <!--- <link rel="stylesheet" href="/static/css/font-awesome.min.css"> !-->
+        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+        <script type="text/javascript" src="{% static "js/tiny_mce/tiny_mce.js" %}"></script>
+        <script type="text/javascript">
+        tinymce.init({
+            selector: "textarea"
+        });
+        </script>
+        <title>Login BROSSCMS</title>
+</head>
+<body>
+        <div id="header"> 
+                <div class="logo">
+                        <a href="/dashboard/">
+                                <h1>Bross CMS</h1>
+                        </a>
+                </div>
+        </div> 
 
-<form id="login" action="" method="post">
-{% csrf_token %}
-{% if form.errors %} <p> Please correct the fields:</p> {% endif %}
-<div class="register_div">
-	{% if form.username.errors %} <p class="error"> {{form.username.errors}}</p> {% endif %}
-	<p> <label for="username" {% if form.username.errors %} class="error" {% endif %}> Username: </label></p>
-	<p> {{form.username}} </p>
-</div>
-<div class="register_div">
-        {% if form.password.errors %}<p class="error">{{ form.password.errors }}</p>{% endif %}
-        <p><label for="password"{% if form.password.errors %} class="error"{% endif %}>Password:</label></p>
-        <p>{{ form.password }}</p>
-</div>
-<a href="#" class="silly">forgot your password?</a><input type="submit" name="submit" value="login" />
-</form>
-<p>Forgot your password? <a href="/resetpassword/">Reset it here</a></p>
+        <div id="content" class="center"> 
+                <h1>Let's get started!</h1></br>
+                <button class="big">register</button>
+                <h2>Already got an account?</h2>
 
-{% endblock %}
+                <form id="login" action="" method="post">
+                        {% csrf_token %}
+                        {% if form.errors %} <p> Please correct the fields:</p> {% endif %}
+                        <div class="register_div">
+                                {% if form.username.errors %} <p class="error"> {{form.username.errors}}</p> {% endif %}
+                                <p> <label for="username" {% if form.username.errors %} class="error" {% endif %}> Username: </label></p>
+                                <p> {{form.username}} </p>
+                        </div>
+                        <div class="register_div">
+                                {% if form.password.errors %}<p class="error">{{ form.password.errors }}</p>{% endif %}
+                                <p><label for="password"{% if form.password.errors %} class="error"{% endif %}>Password:</label></p>
+                                <p>{{ form.password }}</p>
+                        </div>
+                        <a href="/resetpassword/" class="silly">forgot your password?</a><input type="submit" name="submit" value="login" />
+                </form>
+        </div>
+        <div id="footer">
+                <p> 2013 Bross CMS | <a href="http://www.brosscms.com/" target="_BLANK">www.brosscms.com</a></p>
+        </div>
+</body>
+</html>
