--- a/bross/static/css/style.css
+++ b/bross/static/css/style.css
@@ -1,3 +1,5 @@
+/* ---- BASIC ---- */
+
 .transition2 {
 	-webkit-transition-duration: 0.2s;
 	-moz-transition-duration: 0.2s;
@@ -29,20 +31,11 @@ body {
 	padding:0;
 }
 
-.content {
-	width: 1000px;
-	margin: 0 auto;
+a:hover {
+	text-decoration: underline;
 }
 
-.form {
-	width: 500px;
-	margin: 0 auto;
-}
-
-.register_div {
-	margin:10px 0;
-}
-
+/* ---- HEADER ---- */
 #header {
 /*	position:fixed;
 	top:0;
@@ -65,10 +58,13 @@ body {
 	width: 150px;
 	float: left;
 }
+
 .logo a {
 	display: block;
 }
 
+
+/* --- NAV --- */
 .nav {
 	float: left;
 }
@@ -152,6 +148,22 @@ body {
 	display: block;
 }
 
+.content {
+	width: 1000px;
+	margin: 0 auto;
+}
+
+.form {
+	width: 500px;
+	margin: 0 auto;
+}
+
+.register_div {
+	margin:10px 0;
+}
+
+
+/* --- CONTENT --- */
 #content {
 	width:100%;
 	float: left;
@@ -180,6 +192,8 @@ body {
 	width: 1000px;
 }
 
+
+/* --- FOOTER --- */
 #footer {
 	position: fixed;
 	bottom:0;
@@ -203,6 +217,8 @@ body {
 	text-decoration: none;
 }
 
+
+/* --- BUTTONS AND FIELDS --- */
 button {
 	background:#009cff;
 	border:none;
@@ -326,26 +342,6 @@ a.silly {
 	margin:5px 0;
 }
 
-a:hover {
-	text-decoration: underline;
-}
-
-div.ballon {
-	position:absolute;
-	top:70px;
-	right:50px;
-	width:300px;
-	height:174px;
-	background: url(../img/ballon.png);
-	-webkit-transition-duration: 0.4s;
-	-moz-transition-duration: 0.4s;
-	-o-transition-duration: 0.4s;
-}
-
-div.ballon:hover{
-	background: url(../img/ballonhover.png);
-}
-
 .sidebar {
 	width: 250px;
 	background-color: #2a2e33;
@@ -361,4 +357,24 @@ p.user-loggedin {
 	color: #fff;
 	padding:0px 20px;
 	line-height: 60px;
+}
+
+.form-reset {
+	width: 250px;
+}
+
+
+/* ----- ERROR ----- */
+
+ul.errorlist {
+	list-style: none;
+}
+
+ul.errorlist li {
+	background: rgb(197, 51, 68);
+	border: 1px solid #b00b1e;
+	border-radius: 2px;
+	padding: 2px 5px;
+	margin: 5px 0;
+	color: #fff;
 }
