--- a/bross/templates/registration/password_reset_form.html
+++ b/bross/templates/registration/password_reset_form.html
@@ -1,14 +1,7 @@
-{% extends "base.html" %}
+{% extends "base-other.html" %}
 {% load i18n %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-&rsaquo; {% trans 'Password reset' %}
-</div>
-{% endblock %}
-
-{% block title %}{% trans "Password reset" %}{% endblock %}
+{% block title %}Password reset CMS{% endblock %}
 
 {% block content %}
 
@@ -16,9 +9,11 @@
 
 <p>{% trans "Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one." %}</p>
 
-<form action="" method="post">{% csrf_token %}
-{{ form.email.errors }}
-<p><label for="id_email">{% trans 'Email address:' %}</label> {{ form.email }} <input type="submit" value="{% trans 'Reset my password' %}" /></p>
-</form>
+<div class="form-reset">
+	<form action="" method="post">{% csrf_token %}
+	{{ form.email.errors }}
+	<label for="id_email">{% trans 'Email address:' %}</label> {{ form.email }} <input type="submit" value="{% trans 'Reset my password' %}" />
+	</form>
+</div>
 
 {% endblock %}
