--- a/bross/templates/menusall.html
+++ b/bross/templates/menusall.html
@@ -1,18 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
 
+        <ol id="menulist", class='parentitems'>
+                {% for parent in parent %}
+                <li><p><a href="/menus/">{{ parent }}</a></p></li>
+                {% endfor %} 
+                
+
+        </ol>
         <ol id="menulist", class='listitems'>
                 {% for menu in menus %}
                 <li><p><a href="/menus/"><img src="{{ menu.image1.url }}" />{{ menu }}</a></p></li>
-                {% endfor %}
-
-                {% for parent in menus %}
-                <p><a href="/menus/">{{ parent }}</a></p>
-                {% endfor %}              
+                {% endfor %}   
         </ol>
-
-		<script>$(function  () {
-		  $("ol.listitems").sortable()
-		}) </script> 
+                <script src='js/jquery-sortable.js'>$(function  () {
+                  $("ol.listitems").sortable()
+                  $("ol.parentitems").sortable()                 
+                
+                }) </script>
 
 {% endblock %}
