--- a/core/templates/add_page.html
+++ b/core/templates/add_page.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% load static %}
 {% block title %}Add Page{% endblock %}
 {% block nav %}
@@ -19,6 +20,11 @@
 {% if form.errors %} <p> Please correct the fields: {{form.errors}} </p> {% endif %}
         {% csrf_token %}
         <ul>
+            <!--
+        <label> URL INVULLEN! </label>
+        <p>{{ form.url }}</p>!-->
+        <label> AUTHOR </label>
+        <p>{{ form.author }}</p>     
         <label> Title </label>
         <p>{{ form.title }}</p>
         <label> Content </label>
