--- a/bross/templates/treemenus/menu_item.html
+++ b/bross/templates/treemenus/menu_item.html
@@ -3,29 +3,29 @@
 {% ifequal menu_type "unordered-list" %}
 	{% if menu_item.has_children %}
 
-	    <li class="dd-item"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a>
-			<ul class="dd-list">
+	    <li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a>
+			<ol class="dd-list">
 			    {% for child in menu_item.children %}
 			        {% show_menu_item child %}
 				{% endfor %}
-			</ul>
-		</li class="dd-item">
+			</ol>
+		</li class="dd-item" data-id="{{ menu_item.id }}">
 	{% else %}
-		<li class="dd-item"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a></li>
+		<li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a></li>
 	{% endif %}
 
 {% endifequal %}
 
 {% ifequal menu_type "ordered-list" %}
 	{% if menu_item.has_children %}
-	    <li class="dd-item"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a>
-			<ol class="dd-list">
+	    <li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a>
+			<ol class="dd-list" data-id="{{ menu_item.id }}">
 			    {% for child in menu_item.children %}
 			        {% show_menu_item child %}
 				{% endfor %}
 			</ol>
-		</li class="dd-item">
+		</li class="dd-item" data-id="{{ menu_item.id }}">
 	{% else %}
-		<li class="dd-item"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a></li>
+		<li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a></li>
 	{% endif %}
 {% endifequal %}
