--- a/bross/templates/pages.html
+++ b/bross/templates/pages.html
@@ -16,5 +16,8 @@
 {% endblock %}
 {% block content %}
 	{% block h1 %}Pages{% endblock %}
-    <p>Laat pages zien</p>
+        {% for brosscontent in pages %}
+        <p><a href="pages/edit/{{ brosscontent.url }}/">{{ brosscontent }}</a></p>
+        {% endfor %}    
+        <p>Laat pages zien TEST</p>
 {% endblock %}
