--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -41,13 +41,22 @@ a, button, input[type='submit']  {
 }
 
 body,html{
+  width:100%;
   height:100%;
 }
 
 body {
 	font-family: 'Lato', Arial, sans-serif;
 	background:#dadada;
-	padding:0;
+	padding:50px 0 0;
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+.container {
+	width:100%;
+	min-height:100%;
 }
 
 .content {
@@ -65,9 +74,9 @@ body {
 }
 
 #header {
-/*	position:fixed;
+	position:fixed;
 	top:0;
-	left:0;*/
+	left:0;
 	overflow: hidden;
 	width:100%;
 	height: 60px;
@@ -179,8 +188,8 @@ body {
 }
 
 .cms-content {
-	float: left;
-	padding:20px;
+	width:100%;
+	padding:30px 20px 70px 280px;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
@@ -200,6 +209,12 @@ body {
 .editor-left {
 	float:left;
 	width:670px;
+}
+
+.cms-content h1 {
+	font-size:50px;
+	font-weight: 300;
+	color:#353a40;
 }
 
 .container {
@@ -379,16 +394,68 @@ div.ballon:hover{
 .sidebar {
 	width: 250px;
 	background-color: #2a2e33;
+	color:#fff;
 	height: 100%;
+	position:fixed;
 	float: left;
-	padding:10px;
+	padding:40px 10px;
 	-moz-box-sizing: border-box; 
 	-webkit-box-sizing: border-box; 
 	box-sizing: border-box;
+}
+
+.sidebar ul {
+	margin:10px 0;
+}
+
+.sidebar li {
+	padding:10px;
+}
+
+.sidebar li a {
+	display: block;
+}
+
+.sidebar li a.page-link {
+	color:#6e7072;
+	text-decoration: none;
+	font-weight: 300;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	height: 20px;
+	display: block;
+	width: 85%;
+	white-space: nowrap;
+}
+
+.sidebar a.page-link:hover {
+	color:#fff;
+}
+
+.sidebar a span {
+	background: url(../img/trash.png) no-repeat;
+	width: 14px;
+	height: 16px;
+	float: right;
+	display: block;
+	margin-top:3px;
+}
+
+.sidebar a span:hover {
+	background: url(../img/trash-hover.png) no-repeat;
+	width: 14px;
+	height: 16px;
+	float: right;
+	display: block;
+	margin-top:3px;
 }
 
 p.user-loggedin {
 	color: #fff;
 	padding:0px 20px;
 	line-height: 60px;
+}
+
+img.page-bg {
+	margin-left:40%;
 }
