--- a/bross/templates/treemenus/menu_item.html
+++ b/bross/templates/treemenus/menu_item.html
@@ -2,30 +2,41 @@
 
 {% ifequal menu_type "unordered-list" %}
 	{% if menu_item.has_children %}
-
-	    <li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a>
+		{% if menu_item.extension.published %}
+	    	<li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a>
+	    {% endif %}
 			<ol class="dd-list">
 			    {% for child in menu_item.children %}
 			        {% show_menu_item child %}
 				{% endfor %}
 			</ol>
-		</li class="dd-item" data-id="{{ menu_item.id }}">
+		{% if menu_item.extension.published %}
+			</li class="dd-item" data-id="{{ menu_item.id }}">
+		{% endif %}
 	{% else %}
-		<li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a></li>
+		{% if menu_item.extension.published %}
+			<li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a></li>
+		{% endif %}
 	{% endif %}
 
 {% endifequal %}
 
 {% ifequal menu_type "ordered-list" %}
 	{% if menu_item.has_children %}
-	    <li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a>
+	    {% if menu_item.extension.published %}
+	    	<li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a>
+	    {% endif %}
 			<ol class="dd-list" data-id="{{ menu_item.id }}">
 			    {% for child in menu_item.children %}
 			        {% show_menu_item child %}
 				{% endfor %}
 			</ol>
-		</li class="dd-item" data-id="{{ menu_item.id }}">
+		{% if menu_item.extension.published %}
+			</li class="dd-item" data-id="{{ menu_item.id }}">
+		{% endif %}
 	{% else %}
-		<li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a></li>
+		{% if menu_item.extension.published %}
+			<li class="dd-item" data-id="{{ menu_item.id }}"><div class="dd-handle"><a href="{{ menu_item.url }}">{{ menu_item.caption }}</div></a></li>
+		{% endif %}
 	{% endif %}
 {% endifequal %}
