--- a/core/templates/sjaan_thema/landing.html
+++ b/core/templates/sjaan_thema/landing.html
@@ -11,9 +11,21 @@
 			</div>
 		</div>
 
+		<div id="home-image">
+		</div>
+
 		<div id="content">
-			<h1>{{ page.title }} </h1>
-			<p> {{ page.content|safe }} </p>
+			<div id="content-inner" class="clearfix">
+				<div id="content-left">
+					<h1>{{ page.title }}</h1>
+					<p>{{ page.content|safe }}</p>
+					<br>
+				</div>
+				<div id="sidebar">
+					<h2>Sidebar omdat het kan</h2>
+					<p>{{ page.content2|safe }}</p>
+				</div>
+			</div>
 		</div>
 		
 		<div id="footer">
