slaat nergens op

--- a/bross/templates/add_menu.html
+++ b/bross/templates/add_menu.html
@@ -12,6 +12,9 @@
        <p>{{ form.url }}</p>
        <label> Named Url </label>
        <p>{{ form.named_url }}</p>
+       <label> Published? </label>
+       <p>{{ form.published }}</p> 
+
        <p style="height:2em"><input type="submit" alt="Register" value="Add page"/></p>
    </ul>
    </form>
