--- a/bross/templates/menusall.html
+++ b/bross/templates/menusall.html
@@ -1,13 +1,3 @@
-{% extends "base.html" %}
-
-{% block content %}
-
-{% load tree_menu_tags %}
-
-
-
-   <style type="text/css">
-=======
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static "css/menu.css" %}" title="default" />
 {% block content %}
@@ -15,27 +5,8 @@
 
 
     <div class="cf nestable-lists">
-
-        <div class="dd" id="nestable">
-            <ol class="dd-list">
-                <li class="dd-item" data-id="7">
-                    <div class="dd-handle"><p>{% show_menu "henkiepenkie" "ordered-list" %}</p></div>
-                    <ol class="dd-list">
-                        <!--\\<li class="dd-item" data-id="8"><div class="dd-handle">{% show_menu "henkiepenkie" "ordered-list" %}</div></li>-->
-                    </ol>
-
-                </li>
-
-
-                
-            </ol>
-        </div>
-
-        
-
-
      <div class="dd" id="nestable">
-        {% show_menu "NieuwMenu" "unordered-list" %}
+        {% show_menu "henkiepenkie" "unordered-list" %}
     </div>
 
     <textarea id="nestable-output"></textarea>
