Deleted editor, styled menu page + menu add page
AGSGSDGGSGASGDSAGSDGSDGAAGSDSGAGDSAGSDADGSADGSAGDGDS

--- a/core/templates/add_menu.html
+++ b/core/templates/add_menu.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 {% block content %}
 <a href="/menus/" class="button">Back to pages</a>
    <form class="editor" action="" method="post">
