--- a/core/templates/edit_page.html
+++ b/core/templates/edit_page.html
@@ -1,6 +1,7 @@
+
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Pages{% endblock %}
+{% block title %}Add Page{% endblock %}
 {% block nav %}
         <div class="nav">
             <ul>
@@ -11,59 +12,18 @@
             </ul>
         </div>
 {% endblock %}
+
 {% block sidebar %}
 <a href="/pages/add/" class="button"> Add a new page </a>
 <ul class="pages">
         {% for title in pages %}
-        <li class="page"><a href="/{{ title.url }}/">{{ title }}</a><a href="#"><span></span></a></li>
+        <li class="page"><a class="confirm" href="/pages/delete/{{ title.url }}/"><span></span></a><a class="page-link" href="/pages/edit/{{ title.url }}/">{{ title }}</a></li>
         {% endfor %}    
 </ul>
 {% endblock %}
+
+<a href="/pages/" class="button">Back to pages</a>
+{% block h1 %}Edit page{% endblock %}
 {% block content %}
-	{% block h1 %}Pages{% endblock %}
-<form class="editor" action="" method="post">
-{% if form.errors %} <p> Please correct the fields: {{form.errors}} </p> {% endif %}
-        {% csrf_token %}
-        <ul> 
-        <label> Template </label>
-        <p>{{ form.template }}</p>
-        <label> URL INVULLEN! </label>
-        <p>{{ form.url }}</p>
-        <label> AUTHOR </label>
-        <p>{{ form.author }}</p>     
-        <label> Title </label>
-        <p>{{ form.title }}</p>
-        <label> Content </label>
-        <p>{{ form.content }}</p>
-        <label> Desription </label>
-        <p>{{ form.description }}</p>
-        <label> Location </label>
-        <p>{{ form.location }}</p>
-        <label> Status </label>
-        <p>{{ form.status }}</p>
-        <label> Menu </label>
-        <p>{{ form.menu }}</p>
-        <label> Parent </label>
-        <p>{{ form.parent }}</p>
-        <p style="height:2em"><input type="submit" alt="Register" value="Save page"/></p>
-    </ul>
-    </form>
-<script>
-$(document).ready(function() {
-    if ($('select#id_template').val() == 'H' ){ 
-        $('#content2').show();
-    }
-});
-
-$('select#id_template').change(function() {
-    if ($(this).val() == 'H' ){ 
-        $('#content2').show();
-    }
-    
-    else {
-        $('#content2').hide(); 
-    }
-});
-
-</script>
+    {% include "page_editor.html" %}
 {% endblock %}
