--- a/core/templates/page_editor.html
+++ b/core/templates/page_editor.html
@@ -1,60 +1,72 @@
-{% extends "base.html" %}
-{% load static %}
-{% block title %}Add Page{% endblock %}
-{% block nav %}
-        <div class="nav">
-            <ul>
-                <li><a class="pages active" href="/pages/"><span><img src="{% static "img/pages.png" %}" height="21" width="17"> </span>Pages</a></li>
-                <li><a class="themes" href="/themes/"><span><img src="{% static "img/themes.png" %}" height="21" width="21"></span> Themes</a></li>
-                <li><a class="menus" href="/menus/"><span><img src="{% static "img/menu.png" %}" height="18" width="21"></span> Menus</a></li>
-                <li><a class="modules" href="/modules/"><span><img src="{% static "img/modules.png" %}" height="21" width="21"></span> Modules</a></li>
-            </ul>
-        </div>
-{% endblock %}
-
-{% block content %}
-	<a href="/pages/" class="button">Back to pages</a>
     <form class="editor" action="" method="post">
 {% if form.errors %} <p> Please correct the fields: {{form.errors}} </p> {% endif %}
         {% csrf_token %}
         <ul>
-        <label> Template </label>
-        <p>{{ form.template }}</p>
-        <label>URL</label>
-        <p>{{ form.url }}</p>
-        <label> AUTHOR </label>
-        <p>{{ form.author }}</p>     
-        <label> Title </label>
-        <p>{{ form.title }}</p>
-        <label> Content </label>
-        <p>{{ form.content }}</p>
-        <div id="content2" style="display:none;">
-            <label> Sidebar</label>
-            <p>{{ form.content2 }}</p>
+        <p><label> Template </label>
+        {{ form.template }}</p>
+        <p><label> Author </label>
+        {{ form.author }}</p>
+        <p><label> Title </label>
+        {{ form.title }}</p>
+        <p><label>URL</label>
+        {{ form.url }}</p>
+        <p><label> Content </label>
+        {{ form.content }}</p>
+        <div id="useSidebar" style="display:none;">
+            <p><label> Sidebar </label>
+            {{ form.useSidebar }}</p>
         </div>
-        <label> Desription </label>
-        <p>{{ form.description }}</p>
-        <label> Location </label>
-        <p>{{ form.location }}</p>
-        <label> Status </label>
-        <p>{{ form.status }}</p>
-        <label> Menu </label>
-        <p>{{ form.menu }}</p>
-        <label> Parent </label>
-        <p>{{ form.parent }}</p>
+        <div id="editSidebar" style="display:none;">
+            <p><label> Sidebar Title</label>
+            {{ form.sidebarTitle }}</p>
+            <p><label> Sidebar</label>
+            {{ form.sidebar }}</p>
+        </div>
+        <p><label> Desription </label>
+        {{ form.description }}</p>
+        <p><label> Location </label>
+        {{ form.location }}</p>
+        <p><label> Status </label>
+        {{ form.status }}</p>
+        <p><label> Menu </label>
+        {{ form.menu }}</p>
+        <p><label> Parent </label>
+        {{ form.parent }}</p>
         <p style="height:2em"><input type="submit" alt="Register" value="Add page"/></p>
     </ul>
     </form>
 
 <script>
+$(document).ready(function() {
+    if ($('select#id_template').val() == 'H' ){ 
+        $('#useSidebar').show();
+        if ($('input#id_useSidebar').is(":checked")) {
+            $('#editSidebar').show();
+        }
+    }
+});
+
 $('select#id_template').change(function() {
     if ($(this).val() == 'H' ){ 
-        $('#content2').show();
+        $('#useSidebar').show();
+        if ($('input#id_useSidebar').is(":checked")) {
+            $('#editSidebar').slideDown();
+        }
     }
     
     else {
-        $('#content2').hide(); 
+        $('#useSidebar').hide();
+        $('#editSidebar').slideUp(); 
+    }
+});
+
+$('input#id_useSidebar').change(function() {
+    if ($('input#id_useSidebar').is(":checked")) {
+        $('#editSidebar').slideDown();
+    }
+
+    else {
+        $('#editSidebar').slideUp();
     }
 });
 </script>
-{% endblock %}
