--- a/core/templates/sjaan_thema/base.html
+++ b/core/templates/sjaan_thema/base.html
@@ -19,11 +19,27 @@
 	});
 </script>
 </head>
-{% if page.template == 'H' %}
-	{% include "sjaan_thema/landing.html" %}
-{% elif page.template == 'P' %}
-	{% include "sjaan_thema/fullwidth.html" %}
-{% else %}
-	{% include "sjaan_thema/fullwidth.html" %}
-{% endif %}
+<body class="home">
+	<div class="container">
+		<div id="header">
+			<a class="logo" href="#">LOGO</a>
+			{% block nav %}
+			<div id="nav">
+				<ul>
+					{% for title in pages %}
+			        	<li class="page">{% if page.title = title %}<a class="active" href="/{{ title.url }}/">{% else %}<a href="/{{ title.url }}/">{% endif %} {{ title }}</a></strong></li>
+			        {% endfor %}
+				</ul>
+			</div>
+			{% endblock %}
+		</div>
+		{% if page.template == 'H' %}
+			{% include "sjaan_thema/landing.html" %}
+		{% elif page.template == 'P' %}
+			{% include "sjaan_thema/fullwidth.html" %}
+		{% else %}
+			{% include "sjaan_thema/fullwidth.html" %}
+		{% endif %}
+	</div>
+</body>
 </html>
