--- a/core/templates/sjaan_thema/landing.html
+++ b/core/templates/sjaan_thema/landing.html
@@ -1,40 +1,32 @@
-<body class="home">
-	<div class="container">
-		<div id="header">
-			<a class="logo" href="#">LOGO</a>
-			<div id="nav">
-				<ul>
-					{% for title in pages %}
-			        	<li class="page"><a href="/{{ title.url }}/">{{ title }}</a></li>
-			        {% endfor %} 
-				</ul>
-			</div>
-		</div>
+<div id="home-image">
+</div>
 
-		<div id="home-image">
-		</div>
-
-		<div id="content">
-			<div id="content-inner" class="clearfix">
-				<div id="content-left">
-					<h1>{{ page.title }}</h1>
-					<p>{{ page.content|safe }}</p>
-					<br>
-				</div>
-				<div id="sidebar">
-					<h2>Sidebar omdat het kan</h2>
-					<p>{{ page.content2|safe }}</p>
-				</div>
+<div id="content">
+	<div id="content-inner" class="clearfix">
+		{% if page.useSidebar = True %}
+		<div id="content-left">
+			{% else %}
+			<div id="content">
+			{% endif %}
+				<h1>{{ page.title }}</h1>
+				<p>{{ page.content|safe }}</p>
+				<br>
 			</div>
-		</div>
-		
-		<div id="footer">
-			<div class="credits">
-				<p>developed by <a href="http://www.brosscms.com" target="_BLANK">Bross</a></p>
+			{% if page.useSidebar = True %}
+			<div id="sidebar">
+				<h2>{{ page.sidebarTitle }}</h2>
+				<p>{{ page.sidebar|safe }}</p>
 			</div>
-			<div class="copyright">
-				<p>&copy; 2013 BrossCMS | <a href="contact.html">Contact</a></p>
-			</div>
+			{% endif %}
 		</div>
 	</div>
-</body>
+</div>
+
+<div id="footer">
+	<div class="credits">
+		<p>developed by <a href="http://www.brosscms.com" target="_BLANK">Bross</a></p>
+	</div>
+	<div class="copyright">
+		<p>&copy; 2013 BrossCMS | <a href="contact.html">Contact</a></p>
+	</div>
+</div>
