STYLING FORMS N SHITZ

--- a/bross/templates/registration/password_reset_form.html
+++ b/bross/templates/registration/password_reset_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base-other.html" %}
 {% load i18n %}
 
 {% block breadcrumbs %}
@@ -15,10 +15,11 @@
 <h1>{% trans "Forgot your password?" %}</h1>
 
 <p>{% trans "Don’t wory, fill in your email adress below and we will send it right at you!" %}</p>
-
+<div class="form-reset">
 <form action="" method="post">{% csrf_token %}
 {{ form.email.errors }}
 <p><label for="id_email">{% trans 'Email address:' %}</label> {{ form.email }} <input type="submit" value="{% trans 'Reset my password' %}" /></p>
 </form>
+</div>
 
 {% endblock %}
