--- a/bross/templates/registration/password_reset_done.html
+++ b/bross/templates/registration/password_reset_done.html
@@ -1,12 +1,12 @@
-{% extends "base.html" %}
+{% extends "base-other.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password reset successful' %}{% endblock %}
 
 {% block content %}
+<div class="password-reset">
+<h1 class="title">{% trans 'Password reset successful' %}</h1>
 
-<h1>{% trans 'Password reset successful' %}</h1>
-
-<p>{% trans "We've emailed you instructions for setting your password to the email address you submitted. You should be receiving it shortly." %}</p>
-
+<h2 class="description">{% trans "We've emailed you instructions for setting your password to the email address you submitted. You should be receiving it shortly." %}</h2>
+</div>
 {% endblock %}
