--- a/core/templates/registration/password_reset_complete.html
+++ b/core/templates/registration/password_reset_complete.html
@@ -1,14 +1,16 @@
-{% extends "base.html" %}
+{% extends "base-other.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password reset complete' %}{% endblock %}
 
 {% block content %}
 
-<h1>{% trans 'Password reset complete' %}</h1>
+<div class="password-reset">
+<h1 class="title">{% trans 'Password reset complete' %}</h1>
 
-<p>{% trans "Your password has been set.  You may go ahead and log in now." %}</p>
+<h2 class="description">{% trans "Your password has been set.  You may go ahead and log in now." %}</h2>
 
-<p><a href="{{ login_url }}">{% trans 'Log in' %}</a></p>
+<p style="text-align:center"><a href="/login/">{% trans 'Log in' %}</a></p>
+</div>
 
 {% endblock %}
