--- a/core/templates/registration/password_reset_confirm.html
+++ b/core/templates/registration/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base-other.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password reset' %}{% endblock %}
@@ -7,24 +7,26 @@
 
 {% if validlink %}
 
-<h1>{% trans 'Enter new password' %}</h1>
+<div class="password-reset">
+<h1 class="title">{% trans 'Enter new password' %}</h1>
 
-<p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
-
+<h2 class="description">{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</h2>
+<div class="form-reset">
 <form action="" method="post">{% csrf_token %}
 {{ form.new_password1.errors }}
 <p class="aligned wide"><label for="id_new_password1">{% trans 'New password:' %}</label>{{ form.new_password1 }}</p>
 {{ form.new_password2.errors }}
 <p class="aligned wide"><label for="id_new_password2">{% trans 'Confirm password:' %}</label>{{ form.new_password2 }}</p>
-<p><input type="submit" value="{% trans 'Change my password' %}" /></p>
+<p><input class="reset-button" type="submit" value="{% trans 'Change my password' %}" /></p>
 </form>
-
+</div>
+</div>
 {% else %}
 
-<h1>{% trans 'Password reset unsuccessful' %}</h1>
-
-<p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
-
+<div class="password-reset">
+<h1 class="title" style="color:#b00b1e;">{% trans 'Password reset unsuccessful' %}</h1>
+<h2 class="description">{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</h2>
+</div>
 {% endif %}
 
 {% endblock %}
